--- a/docs/contracts/erc721.md
+++ b/docs/contracts/erc721.md
@@ -7,3 +7,151 @@ sidebar_position: 2
 ERC721 is a class which contains all different methods required for standard **erc721** contract.
 
 ERC721 instance can be created by passing token address in constructor. 
+
+```
+import { EthersClient, Web3Client, ERC721 } from "@opweb3/ethcontracts";
+
+const token = new ERC721(<tokenAddress>);
+```
+
+## init
+
+initiate token with provider.
+
+### ethers.js
+
+```
+import { EthersClient, ERC721 } from "@opweb3/ethcontracts";
+await token.init(new EthersClient(<wallet provider>));
+```
+
+### web3.js
+
+```
+import { Web3Client, ERC721 } from "@opweb3/ethcontracts";
+await token.init(new Web3Client(<wallet provider>));
+```
+
+you can call init multiple times with different provider. This allows you to use the same token instance in multichain dapp.
+
+## getName
+
+getName returns the name of the token.
+
+```
+const tokenName = await token.getName();
+```
+## getSymbol
+
+getSymbol returns the symbol of the token.
+
+```
+const symbol = await token.getSymbol();
+```
+
+## getTokenCount
+
+getTokenCount returns the no of token user owns.
+
+```
+const count =  await token.getTokenCount(<userAddress>);
+```
+
+## getOwner
+
+get owner of the token
+
+```
+const owner = await token.getOwner(tokenId);
+```
+
+## getTokenURI
+
+get token uri
+
+```
+const tokenURI = await token.getTokenURI(tokenId);
+```
+
+## getApprovedAccount
+
+get approved account for a tokenId
+
+```
+const account = await token.getApprovedAccount(tokenId);
+```
+
+## isApprovedForAll
+
+check if spender is approved for all NFT of a user 
+
+```
+const isApproved = await token.isApprovedForAll(owner, operator);
+```
+
+## isInterfaceSupported
+
+check if an interface is supported
+
+```
+const isApproved = await token.isInterfaceSupported(interfaceId);
+```
+
+## approve
+
+approve method approves a spender for the tokenId.
+
+```
+const [getTransactionHash, getTransactionReceipt] = await token.approve(<spenderAddress>, <tokenId>);
+
+const txhash = await getTransactionHash();
+const txReceipt = await getTransactionReceipt();
+```
+## setApprovalForAll
+
+setApprovalForAll method approves a spender for all tokens of a user.
+
+```
+token.setApprovalForAll(<spenderAddress>, <approved:boolean>);
+```
+
+```
+const [getTransactionHash, getTransactionReceipt] = await token.setApprovalForAll(<spenderAddress>, true);
+
+const txhash = await getTransactionHash();
+const txReceipt = await getTransactionReceipt();
+```
+
+## transferFrom
+
+transferFrom method can be used to transfer a token to another user by a spender or owner.
+
+```
+const [getTransactionHash, getTransactionReceipt] = await token.transferFrom(<fromAddress>,<toAddress>, <tokenId>);
+
+const txhash = await getTransactionHash();
+const txReceipt = await getTransactionReceipt();
+```
+## safeTransferFrom
+
+safeTransferFrom method is similar to transferFrom except it will be used by contracts like NFT marketplace. 
+
+```
+const [getTransactionHash, getTransactionReceipt] = await token.safeTransferFrom(<fromAddress>,<toAddress>, <tokenId>);
+
+const txhash = await getTransactionHash();
+const txReceipt = await getTransactionReceipt();
+```
+
+## safeTransferFromWithData
+
+safeTransferFromWithData method is similar to safeTransferFrom with option to pass additional data as bytes.
+
+```
+const [getTransactionHash, getTransactionReceipt] = await token.safeTransferFromWithData(<fromAddress>,<toAddress>, <tokenId>);
+
+const txhash = await getTransactionHash();
+const txReceipt = await getTransactionReceipt();
+```
+
+
