rm await from write tx

--- a/docs/contracts/erc721.md
+++ b/docs/contracts/erc721.md
@@ -4,7 +4,7 @@ sidebar_position: 2
 
 # ERC721
 
-ERC721 is a class which contains all different methods required for standard **erc721** contract.
+You can interact with **erc721 token** by creating instance of class `ERC721`. ERC721 class contains all different methods required for standard **erc721** contract.
 
 ERC721 instance can be created by passing token address in constructor. 
 
@@ -32,7 +32,7 @@ import { Web3Client, ERC721 } from "@opweb3/ethcontracts";
 await token.init(new Web3Client(<wallet provider>));
 ```
 
-you can call init multiple times with different provider. This allows you to use the same token instance in multichain dapp.
+👉 you can call `init` multiple times with different provider. This allows you to use the same token instance in multichain dapp.
 
 ## getName
 
@@ -102,7 +102,7 @@ const isApproved = await token.isInterfaceSupported(interfaceId);
 approve method approves a spender for the tokenId.
 
 ```
-const [getTransactionHash, getTransactionReceipt] = await token.approve(<spenderAddress>, <tokenId>);
+const [getTransactionHash, getTransactionReceipt] = token.approve(<spenderAddress>, <tokenId>);
 
 const txhash = await getTransactionHash();
 const txReceipt = await getTransactionReceipt();
@@ -116,7 +116,7 @@ token.setApprovalForAll(<spenderAddress>, <approved:boolean>);
 ```
 
 ```
-const [getTransactionHash, getTransactionReceipt] = await token.setApprovalForAll(<spenderAddress>, true);
+const [getTransactionHash, getTransactionReceipt] = token.setApprovalForAll(<spenderAddress>, true);
 
 const txhash = await getTransactionHash();
 const txReceipt = await getTransactionReceipt();
@@ -127,7 +127,7 @@ const txReceipt = await getTransactionReceipt();
 transferFrom method can be used to transfer a token to another user by a spender or owner.
 
 ```
-const [getTransactionHash, getTransactionReceipt] = await token.transferFrom(<fromAddress>,<toAddress>, <tokenId>);
+const [getTransactionHash, getTransactionReceipt] = token.transferFrom(<fromAddress>,<toAddress>, <tokenId>);
 
 const txhash = await getTransactionHash();
 const txReceipt = await getTransactionReceipt();
@@ -137,7 +137,7 @@ const txReceipt = await getTransactionReceipt();
 safeTransferFrom method is similar to transferFrom except it will be used by contracts like NFT marketplace. 
 
 ```
-const [getTransactionHash, getTransactionReceipt] = await token.safeTransferFrom(<fromAddress>,<toAddress>, <tokenId>);
+const [getTransactionHash, getTransactionReceipt] = token.safeTransferFrom(<fromAddress>,<toAddress>, <tokenId>);
 
 const txhash = await getTransactionHash();
 const txReceipt = await getTransactionReceipt();
@@ -148,7 +148,7 @@ const txReceipt = await getTransactionReceipt();
 safeTransferFromWithData method is similar to safeTransferFrom with option to pass additional data as bytes.
 
 ```
-const [getTransactionHash, getTransactionReceipt] = await token.safeTransferFromWithData(<fromAddress>,<toAddress>, <tokenId>);
+const [getTransactionHash, getTransactionReceipt] = token.safeTransferFromWithData(<fromAddress>,<toAddress>, <tokenId>,<data>);
 
 const txhash = await getTransactionHash();
 const txReceipt = await getTransactionReceipt();
