update doc with new package of core and client

--- a/docs/contracts/erc721.md
+++ b/docs/contracts/erc721.md
@@ -9,7 +9,7 @@ You can interact with **erc721 token** by creating instance of class `ERC721`. E
 ERC721 instance can be created by passing token address in constructor. 
 
 ```
-import { EthersClient, Web3Client, ERC721 } from "@opweb3/ethcontracts";
+import { ERC721 } from "@ethcontracts/core";
 
 const token = new ERC721(<tokenAddress>);
 ```
@@ -21,14 +21,16 @@ initiate token with provider.
 ### ethers.js
 
 ```
-import { EthersClient, ERC721 } from "@opweb3/ethcontracts";
+import { ERC721 } from "@ethcontracts/core";
+import { EthersClient } from "@ethcontracts/ethers";
 await token.init(new EthersClient(<wallet provider>));
 ```
 
 ### web3.js
 
 ```
-import { Web3Client, ERC721 } from "@opweb3/ethcontracts";
+import { ERC721 } from "@ethcontracts/core";
+import { Web3Client } from "@ethcontracts/web3";
 await token.init(new Web3Client(<wallet provider>));
 ```
 
