add erc1155 doc

--- a/docs/contracts/erc721.md
+++ b/docs/contracts/erc721.md
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 2
+keywords: [erc721, smart contracts, ethereum, polygon]
 ---
 
 # ERC721
@@ -111,7 +112,7 @@ const txReceipt = await getTransactionReceipt();
 ```
 ## setApprovalForAll
 
-setApprovalForAll method approves a spender for all tokens of a user.
+setApprovalForAll method approves a spender for all tokens of a user. The last parameter is boolean value - so you can pass true or false to approve or remove approval.
 
 ```
 token.setApprovalForAll(<spenderAddress>, <approved:boolean>);
